initiate main page content

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Taihua(泰华)'s Website </title>
-  </head>
+<html lang="en">
+	<head>
+		<title>Taihua Li</title>
+		<link href="styles/main-page.css" type="text/css" rel="stylesheet">
+	</head>
 
-  <body>
-    <h1 id="name" name="name">Taihua (Ray) Li</h1>
+	<body>
+		<h1>Site Under Construction</h1>
+		<div class="header">
+			<img class="headshot-1" src="images/headshot-1.jpg">
+			<h1>Taihua (Ray) Li</h1>
+			<p class="about-me">I am a data scientist and a former economist.</p>
+		</div>
 
-  </body>
+	</body>
 </html>
