--- a/index.html
+++ b/index.html
@@ -1,17 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- rquired meta for Boostrap -->
+		<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+		<!-- additional stylesheets -->
+		<link rel="stylesheet" href="styles/main_page.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 		<title>Taihua Li</title>
-		<link href="styles/main-page.css" type="text/css" rel="stylesheet">
 	</head>
 
 	<body>
-		<h1>Site Under Construction</h1>
-		<div class="header">
-			<img class="headshot-1" src="images/headshot-1.jpg">
-			<h1>Taihua (Ray) Li</h1>
-			<p class="about-me">I am a data scientist and a former economist.</p>
-		</div>
+		<!-- navigation bar -->
+		<div class="container">
+			<nav class="navbar navbar-expand-lg navbar-light">
+			  <a class="navbar-brand text-white bg-dark px-2" href=""> TL </a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			  </button>
 
+			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			    <ul class="navbar-nav mr-auto">
+			      <li class="nav-item active">
+			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			      </li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">About Me</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Projects</a>
+						</li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">Resume</a>
+			      </li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Other</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Contact Me</a>
+						</li>
+			  </div>
+			</nav>
+		</div>
+		<!-- navigation bar end -->
+
+
+		<!-- Intro -->
+	  <div class="container intro-containter align-middle">
+			<span class="text-center" style="font-family: 'Roboto Mono', monospace;">
+				<h1 class="font-weight-lighter" style="color:green"> Site Under Construction... </h1>
+
+				<h1 class="font-weight-lighter">Taihua (Ray) Li</h1>
+				<span class="text-muted">
+					<h2 class="font-weight-lighter">data scientitst + data engineer</h2>
+					<h5 class="font-weight-lighter">Chicago, IL</h5>
+				</span>
+
+				<h1 class="font-weight-lighter" style="color:green"> Site Under Construction... </h1>
+			</span>
+			<!-- other profiles -->
+			<div class="row justify-content-center">
+				<ul class="profile-icon">
+					<li>
+						<a href="https://www.linkedin.com/in/taihuali/" target="_blank">
+							<img src="img/icon/linkedin.png" alt="linkedin profile"/>
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/TaihuaLi" target="_blank">
+							<img src="img/icon/github.png" alt="github profile"/>
+						</a>
+					</li>
+					<li>
+						<a href="mailto:taihua.ray.li@gmail.com" target="_blank">
+							<img src="img/icon/gmail.png" alt="personal email"/>
+						</a>
+					</li>
+				</ul>
+			</div>
+			<!-- other profiles end -->
+		</div>
+	  <!-- Intro ened -->
+
+
+		<!-- Optional JavaScript for Boostrap -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</body>
 </html>
