--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 				<h1 class="font-weight-lighter">Taihua (Ray) Li</h1>
 				<span class="text-muted">
-					<h2 class="font-weight-lighter">data scientitst + data engineer</h2>
+					<h2 class="font-weight-lighter">data scientist + data engineer</h2>
 					<h5 class="font-weight-lighter">Chicago, IL</h5>
 				</span>
 
