add animation and set up more static pages

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -9,37 +9,36 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		<!-- additional stylesheets -->
-		<link rel="stylesheet" href="styles/main_page.css">
-		<link rel="icon" href="img/logo.png" type="image/icon type">
+		<link rel="icon" href="../img/logo.png" type="image/icon type">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-		<title>Taihua Li's Website</title>
+		<title>Taihua's Resume</title>
 	</head>
 
 	<body style="font-family: 'Roboto Mono', monospace;">
 		<!-- navigation bar -->
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-light">
-			  <a class="navbar-brand" href=""><img src="img/logo.png" alt="logo" style="width:35px; height:35px;"/></a>
+			  <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="logo" style="width:35px; height:35px;"/></a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
 
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav mr-auto">
-			      <li class="nav-item active">
-			        <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
-			      </li>
-						<li class="nav-item">
-							<a class="nav-link" href="pages/about.html">About Me</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="pages/project.html">Projects</a>
-						</li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="pages/resume.html">Resume</a>
+			        <a class="nav-link" href="../index.html">Home</a>
 			      </li>
 						<li class="nav-item">
-							<a class="nav-link" href="pages/contact.html">Contact Me</a>
+							<a class="nav-link" href="./about.html">About Me</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="./project.html">Projects</a>
+						</li>
+			      <li class="nav-item active">
+			        <a class="nav-link" href="">Resume<span class="sr-only">(current)</span></a>
+			      </li>
+						<li class="nav-item">
+							<a class="nav-link" href="./contact.html">Contact Me</a>
 						</li>
 			  </div>
 			</nav>
@@ -47,40 +46,10 @@
 		<!-- navigation bar end -->
 
 
-		<!-- Intro -->
-	  <div class="container intro-containter">
-			<span class="text-center">
+		<p class="text-center"> Coming soon...</p>
 
-				<h1 class="font-weight-lighter my-name">Hello! I'm Taihua (Ray) Li.</h1>
-				<span class="text-muted">
-					<h2 class="font-weight-lighter my-2">data scientist + data engineer</h2>
-					<h5 class="font-weight-lighter my-2">Chicago, IL</h5>
-				</span>
 
-			</span>
-			<!-- other profiles -->
-			<div class="row justify-content-center my-4">
-				<ul class="profile-icon">
-					<li>
-						<a href="https://www.linkedin.com/in/taihuali/" target="_blank">
-							<img src="img/icon/linkedin.png" alt="linkedin profile"/>
-						</a>
-					</li>
-					<li>
-						<a href="https://github.com/TaihuaLi" target="_blank">
-							<img src="img/icon/github.png" alt="github profile"/>
-						</a>
-					</li>
-					<li>
-						<a href="mailto:taihua.ray.li@gmail.com" target="_blank">
-							<img src="img/icon/gmail.png" alt="personal email"/>
-						</a>
-					</li>
-				</ul>
-			</div>
-			<!-- other profiles end -->
-		</div>
-	  <!-- Intro ened -->
+
 
 		<!-- copyright -->
 		<footer class="page-footer">
