--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,14 +49,8 @@
 		<div class="container my-5">
 			<form class="justify-content-center" method="post" action="email/send_email.php">
 					<div class="form-row">
-						<div class="form-col col-md-6">
-							<label for="fname">First Name</label>
-							<input type="text" class="form-control" id="fname" name="fname" required>
-						</div>
-						<div class="form-col col-md-6">
-							<label for="lname">Last Name</label>
-							<input type="text" class="form-control" id="lname" name"lname">
-						</div>
+						<label for="name">Name</label>
+						<input type="text" class="form-control" id="name" name="name" required>
 					</div>
 
 					<div class="form-row my-3">
