switch to free service

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,7 +47,7 @@
 
 		<!-- contact me form -->
 		<div class="container my-5">
-			<form class="justify-content-center" method="post" action="email/send_email.php">
+			<form class="justify-content-center" action="https://formspree.io/taihua.ray.li@gmail.com" method="POST">
 					<div class="form-row">
 						<label for="name">Name</label>
 						<input type="text" class="form-control" id="name" name="name" required>
@@ -55,7 +55,7 @@
 
 					<div class="form-row my-3">
 						<label for="email">E-mail</label>
-						<input type="email" class="form-control" id="email" name="email" required>
+						<input type="email" class="form-control" id="email" name="_replyto" required>
 						<small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
 					</div>
 
