add credit to formspree

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,7 @@
 		<!-- navigation bar end -->
 
 		<!-- contact me form -->
-		<div class="container my-5">
+		<div class="container my-5" style="width: 40%;">
 			<form class="justify-content-center" action="https://formspree.io/taihua.ray.li@gmail.com" method="POST">
 					<div class="form-row">
 						<label for="name">Name</label>
@@ -84,7 +84,8 @@
 				  </div>
 
 					<button type="submit" class="btn btn-dark my-3" value="Send">Send</button>
-					<button type="reset" class="btn btn-dark my-3" value="Reset">Reset</button>
+					<button type="reset" class="btn btn-dark my-3" value="Reset">Reset</button><br>
+					<small id="credit" class="text-muted">Credit: <a href="http://formspree.io" target="_blank">Formspree</a> (free E-mail contact form service)</small>
 			</form>
 		</div>
 		<!-- contact me form end -->
