update background color

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,7 @@
 		<title>Contact Taihua</title>
 	</head>
 
-	<body style="font-family: 'Roboto Mono', monospace;">
+	<body style="font-family: 'Roboto Mono', monospace; background-color: rgba(240, 242, 231, 0.6)">
 		<!-- navigation bar -->
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-light">
@@ -47,6 +47,8 @@
 
 		<!-- contact me form -->
 		<div class="container my-5" style="width: 40%;">
+			<p class="font-italic"> You're Awesome! Let's Talk! </p>
+			<hr style="border: 0; height: 1px; background: #333; background-image: linear-gradient(to right, #ccc, #333, #ccc);">
 			<form class="justify-content-center" action="https://formspree.io/taihua.ray.li@gmail.com" method="POST">
 					<div class="form-row">
 						<label for="name">Name</label>
@@ -93,7 +95,7 @@
 		<!-- copyright -->
 		<footer class="page-footer">
 			<div class="text-center fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
-				© 2019 Taihua Li All Rights Reserved
+				&copy;2019 Taihua Li All Rights Reserved
 			</div>
 		</footer>
 		<!-- copyright end -->
