--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<title>Taihua Li's Website</title>
 	</head>
 
-	<body style="font-family: 'Roboto Mono', monospace;">
+	<body style="font-family: 'Roboto Mono', monospace; background-color: rgba(240, 242, 231, 0.6)">
 		<!-- navigation bar -->
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-light">
@@ -72,7 +72,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="mailto:taihua.ray.li@gmail.com" target="_blank">
+						<a href="pages/contact.html">
 							<img src="img/icon/gmail.png" alt="personal email"/>
 						</a>
 					</li>
@@ -85,7 +85,7 @@
 		<!-- copyright -->
 		<footer class="page-footer">
 			<div class="text-center fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
-				© 2019 Taihua Li All Rights Reserved
+				&copy;2019 Taihua Li All Rights Reserved
 			</div>
 		</footer>
 		<!-- copyright end -->
