--- a/pages/project.html
+++ b/pages/project.html
@@ -14,7 +14,7 @@
 		<title>Taihua's Projects</title>
 	</head>
 
-	<body style="font-family: 'Roboto Mono', monospace;">
+	<body style="font-family: 'Roboto Mono', monospace; background-color: rgba(240, 242, 231, 0.6)">
 		<!-- navigation bar -->
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-light">
@@ -51,7 +51,7 @@
 		<!-- copyright -->
 		<footer class="page-footer">
 			<div class="text-center fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
-				© 2019 Taihua Li All Rights Reserved
+				&copy;2019 Taihua Li All Rights Reserved
 			</div>
 		</footer>
 		<!-- copyright end -->
