--- a/pages/resume.html
+++ b/pages/resume.html
@@ -59,7 +59,7 @@
 				<div class="col-sm-10">
 					<div class="row">
 						<div class="col-sm-10">
-							<p class="text-muted" style="font-size: 110%;"><u>Tools & Technologies</u></p>
+							<p class="text-muted" style="font-size: 110%;">Tools & Technologies</p>
 						</div>
 					</div>
 
