--- a/pages/resume.html
+++ b/pages/resume.html
@@ -53,7 +53,7 @@
 
 			<div class="row">
 				<div class="col-sm-2">
-					<p style="font-size: 120%;">&raquo; EXPERTISE</p>
+					<p style="font-size: 115%;">EXPERTISE</p>
 				</div>
 
 				<div class="col-sm-10">
