--- a/pages/resume.html
+++ b/pages/resume.html
@@ -98,7 +98,7 @@
 
 		<!-- copyright -->
 		<footer class="page-footer">
-			<div class="text-center fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
+			<div class="text-left fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
 				&copy;2019 Taihua Li All Rights Reserved
 			</div>
 		</footer>
