--- a/pages/about.html
+++ b/pages/about.html
@@ -45,18 +45,17 @@
 		</div>
 		<!-- navigation bar end -->
 
-		<!-- copyright -->
-		<footer class="page-footer">
-			<div class="text-center fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
-				&copy;2019 Taihua Li All Rights Reserved
-			</div>
-		</footer>
-		<!-- copyright end -->
-
 		<p class="text-center"> Coming soon... In the meantime, here is a picture of me :)</p>
 
 		<img src="../img/headshot-1.jpeg" style="width: 50%;"/>
 
+		<!-- copyright -->
+		<footer class="page-footer">
+			<div class="text-left fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
+				&copy;2019 Taihua Li All Rights Reserved
+			</div>
+		</footer>
+		<!-- copyright end -->
 
 		<!-- Optional JavaScript for Boostrap -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
