--- a/pages/resume.html
+++ b/pages/resume.html
@@ -45,15 +45,17 @@
 			</nav>
 		</div>
 		<!-- navigation bar end -->
-		<div class="container-fluid my-5" style="width: 55%">
+		<div class="container-fluid" style="width: 65%">
 			<div class="row">
 				<h1 class="text-center" style="font-family: 'Courier New', Courier, monospace"> It's all about Data. </h1>
 			</div>
-			<hr style="border: 0; height: 1px; background: #333; background-image: linear-gradient(to right, #ccc, #333, #ccc);">
 
+			<hr>
+
+			<!-- Expertise -->
 			<div class="row">
 				<div class="col-sm-2">
-					<p style="font-size: 115%;">EXPERTISE</p>
+					<p style="font-size: 125%;">EXPERTISE</p>
 				</div>
 
 				<div class="col-sm-10">
@@ -76,7 +78,7 @@
 						</div>
 						<div class="col-sm-2">
 							<div class="skill-btn"> Java
-								<span class="skill-desc"> Coming from non-CS background, I self-taught Java in 2016 to learn to build functional recommender systems. At my current work, I am able to deploy data science models in Java using PMML. </span>
+								<span class="skill-desc"> I self-taught Java in 2016 to learn to build functional recommender systems. At my current work, I am able to deploy data science models in Java using PMML. </span>
 							</div>
 						</div>
 						<div class="col-sm-2">
@@ -91,10 +93,362 @@
 						</div>
 					</div>
 
+					<div class="row my-3">
+						<div class="col-sm-2">
+							<div class="skill-btn"> NoSQL
+								<span class="skill-desc"> I'm comfortable using NoSQL databases. Currently, I'm working with MongoDB. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> Git
+								<span class="skill-desc"> I use Git at work to version control data science projects, share and contribute to code, and manage project tasks. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> Spark
+								<span class="skill-desc"> I self-taught Spark in 2016 and used it for a research task. Currently, I'm using PySpark as part of the ETL pipeline I build at work and also to perform data wrangling to prepare data for modeling tasks. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> HTML & CSS
+								<span class="skill-desc"> The webiste you're reading right now is built with HTML, CSS and Bootstrap. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> JavaScript
+								<span class="skill-desc"> I used JavaScript primarily for D3.js, for which you can find sample projects in my <span class="font-weight-bold">Projects</span> page. </span>
+							</div>
+						</div>
+					</div>
+
+					<div class="row my-3">
+						<div class="col-sm-2">
+							<div class="skill-btn"> NumPy
+								<span class="skill-desc"> I'm proficient in NumPy as I use it day-to-day for data preparation and image wrangling work. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> Pandas
+								<span class="skill-desc"> I'm proficient in Pandas as I use it day-to-day for data preparation and wranling work. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn" style="font-size: 90%; padding-top: 1px; padding-bottom: 1px;"> Scikit-Learn
+								<span class="skill-desc"> I'm proficient in Scikit-Learn and its pipeline functionalities, including customizing transformers and estimaters; see my <span class="font-weight-bold">Projects</span> page for sample work. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> Keras
+								<span class="skill-desc"> I'm familiar with Keras to the point where I can tweak existing code to conduct addtional experiments. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> Tensorflow
+								<span class="skill-desc"> I'm familiar with Tensorflow to the point where I can tweak existing code to conduct addtional experiments. </span>
+							</div>
+						</div>
+					</div>
+
+					<div class="row my-3">
+						<div class="col-sm-2">
+							<div class="skill-btn"> Docker
+								<span class="skill-desc"> I use Docker to ship my projects to other environments for training and deployment; mostly for data science work. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> Luigi
+								<span class="skill-desc"> I'm proficient in Luigi and have built a functioning ETL pipeline at work; I contributed to Luigi's Spark module to fix its bug on using customized task modules. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> AirFlow
+								<span class="skill-desc"> I'm proficient in AirFlow for data science modeling tasks, including data wrangling and cleaning, modeling, and evaluation. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> Kafka
+								<span class="skill-desc"> Currently, I'm using Kafka as part of the ETL pipeline I'm building at work to perform data injestion. Though I can interact with Kafka's client-side API, I am not knowledgeable of how to set it up from scratch. </span>
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="skill-btn"> AWS
+								<span class="skill-desc"> I'm familiar with S3 and EC2, mainly. Currently, I'm studying to become an <span class="font-weight-bold">AWS Certified Solution Architect</span>, after which I'm planning to obtain the <span class="font-weight-bold">AWS Machine Learning Specialization</span>. </span>
+							</div>
+						</div>
+					</div>
+
+						<div class="row">
+							<div class="col-sm-10">
+								<p class="text-muted" style="font-size: 110%;">Machine Learning Algorithms</p>
+							</div>
+						</div>
+
+						<div class="row mb-3">
+							<div class="col-sm-5">
+								<div class="skill-btn"> Supervised Learning
+									<span class="skill-desc text-left" style="width: 400px; left: -75%;">
+										Popular non-deep learning algorithms which I'm familiar with:
+										<ul>
+											<li>Linear Regression</li>
+											<li>Logistic Regression</li>
+											<li>Naive Bayes</li>
+											<li>K-Nearest Neighbor</li>
+											<li>Decision Tree</li>
+											<li>Random Forest</li>
+											<li>Support Vector Machine</li>
+											<li>Extreme Gradient Boosting Machine</li>
+										</ul>
+									</span>
+								</div>
+							</div>
+
+						<div class="col-sm-5">
+							<div class="skill-btn"> Unsupervised Learning
+								<span class="skill-desc text-left" style="width: 400px; left: 25%;">
+									Popular non-deep learning algorithms which I'm familiar with:
+									<ul>
+										<li>Clustering</li>
+										<li>Principal Component Analysis</li>
+										<li>Factor Analysis</li>
+										<li>Canonical Correlation Analysis</li>
+										<li>Matrix Decomposition</li>
+										<li>SVD++</li>
+									</ul>
+								</span>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-sm-10">
+							<p class="text-muted" style="font-size: 110%;">AI Applications</p>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-sm-5">
+							<div class="skill-btn"> Propensity Modeling
+								<span class="skill-desc text-left" style="width: 200px; left: 25%;">
+									I have experience in:
+									<ul>
+										<li>Engagement Modeling</li>
+										<li>Churn Prediction</li>
+										<li>Conversion Prediction</li>
+										<li>Trajectory Analysis</li>
+									</ul>
+								</span>
+							</div>
+						</div>
+
+						<div class="col-sm-5">
+							<div class="skill-btn"> Outlier Detection
+								<span class="skill-desc text-left" style="width: 300px; left: 25%;">
+									I have experience in:
+									<ul>
+										<li>Outlier Detection/Classification</li>
+										<li>Fraud Profiling and Detection</li>
+									</ul>
+								</span>
+							</div>
+						</div>
+					</div>
+
+					<div class="row my-3">
+						<div class="col-sm-5">
+							<div class="skill-btn"> Recommender System
+								<span class="skill-desc text-left" style="width: 270px; left: 25%;">
+									I have experience in:
+									<ul>
+										<li>Item-based Recommender</li>
+										<li>Content-based Recommender</li>
+										<li>Tag-based Recommender</li>
+										<li>Multi-stakeholder Recommender</li>
+									</ul>
+								</span>
+							</div>
+						</div>
+
+						<div class="col-sm-5">
+							<div class="skill-btn"> Natural Language Processing
+								<span class="skill-desc text-left" style="width: 300px; left: 25%;">
+									I have experience in:
+									<ul>
+										<li>EHR processing; see <span class="font-weight-bold">Publications</span></li>
+										<li>Twitter data processing</li>
+										<li>Sentiment analysis</li>
+										<li>Bag-of-word</li>
+										<li>Word2Vec (deep learning)</li>
+									</ul>
+								</span>
+							</div>
+						</div>
+					</div>
+
+					<div class="row mb-3">
+						<div class="col-sm-5">
+							<div class="skill-btn"> Other
+								<span class="skill-desc text-left" style="width: 300px; left: 25%;">
+									I have experience in:
+									<ul>
+										<li>Image processing</li>
+											<ul>
+												<li>Edge detector</li>
+												<li>Filters</li>
+												<li>Blob detector</li>
+												<li>Feature extractor</li>
+											</ul>
+										<li>Image searching engine</li>
+										<li>Video processing</li>
+										<li>Data engineering pipeline</li>
+									</ul>
+								</span>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
+		<!-- Expertise end -->
 
+		<hr>
+
+		<!-- Work Experience -->
+		<div class="row">
+			<!-- title -->
+			<div class="col-sm-2">
+				<p style="font-size: 125%;">EXPERIENCE</p>
+			</div>
+			<!--- title end -->
+
+			<!-- content -->
+			<div class="col-sm-10">
+
+				<!-- work exp 1 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; Data Scientist II, <a href="https://www.cccis.com/" target="_blank"> CCC Information Services</a>, Chicago, IL
+					</div>
+					<div class="col-sm-3 text-right">
+						Jan'19 - Present
+					</div>
+				</div>
+				<!-- work exp 1 end -->
+
+				<!-- work exp 2 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; Data Scientist I, <a href="https://www.cccis.com/" target="_blank"> CCC Information Services</a>, Chicago, IL
+					</div>
+					<div class="col-sm-3 text-right">
+						Jun'17 - Jan'19
+					</div>
+				</div>
+				<!-- work exp 2 end -->
+
+				<!-- work exp 3 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; Lead Data Science Instructor, <a href="https://generalassemb.ly/instructors/taihua-li/20185" target="_blank"> General Assembly</a>, Chicago, IL
+					</div>
+					<div class="col-sm-3 text-right">
+						Apr'19 - Jun'19
+					</div>
+				</div>
+				<!-- work exp 3 end -->
+
+				<!-- work exp 4 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; Informatics Researcher, <a href="https://medicine.yale.edu/ycmi/" target="_blank"> Yale University</a>, New Haven, CT
+					</div>
+					<div class="col-sm-3 text-right">
+						Mar'17 - Sep'18
+					</div>
+				</div>
+				<!-- work exp 4 end -->
+
+				<!-- work exp 5 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; Data Scientist, <a href="http://digitalyouthnetwork.org/" target="_blank"> Digital Youth Network</a>, Chicago, IL
+					</div>
+					<div class="col-sm-3 text-right">
+						Dec'15 - Jun'17
+					</div>
+				</div>
+				<!-- work exp 5 end -->
+			</div>
+			<!-- content end -->
 		</div>
+		<!-- Work Experience end -->
+
+		<hr>
+
+		<!-- Education -->
+		<div class="row">
+			<!-- title -->
+			<div class="col-sm-2">
+				<p style="font-size: 125%;">EDUCATION</p>
+			</div>
+			<!--- title end -->
+
+			<!-- content -->
+			<div class="col-sm-10">
+
+				<!-- Ed 1 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; M.S. in Predictive Analytics, <a href="https://www.depaul.edu/" target="_blank">DePaul University</a>, Chicago, IL
+					</div>
+					<div class="col-sm-3 text-right">
+						Graduated Jun'17
+					</div>
+				</div>
+				<!-- Ed 1 end -->
+
+				<!-- Ed 2 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; B.A. in Economics, <a href="https://www.ripon.edu/" target="_blank">Ripon College</a>, Ripon, WI
+					</div>
+					<div class="col-sm-3 text-right">
+						Graduated May'15
+					</div>
+				</div>
+				<!-- Ed 2 end -->
+
+				<!-- Ed 3 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; B.A. in Business Management, <a href="https://www.ripon.edu/" target="_blank">Ripon College</a>, Ripon, WI
+					</div>
+					<div class="col-sm-3 text-right">
+						Graduated May'15
+					</div>
+				</div>
+				<!-- Ed 3 end -->
+
+			</div>
+			<!-- content end -->
+		</div>
+		<!-- Education End -->
+
+		<hr>
+
+		<!-- Certificate -->
+		<div class="row">
+			<!-- title -->
+			<div class="col-sm-2">
+				<p style="font-size: 125%;">CERTIFICATE</p>
+			</div>
+			<!--- title end -->
+
+			<!-- content -->
+
+
+
+		  <!-- content end-->
+		</div>
+		<!-- Certificate  -->
 
 		<!-- copyright -->
 		<footer class="page-footer">
