--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 						</li>
 			  </div>
 			</nav>
+			<hr>
 		</div>
 		<!-- navigation bar end -->
+
 
 
 		<!-- Intro -->
@@ -76,9 +78,19 @@
 							<img src="img/icon/gmail.png" alt="personal email"/>
 						</a>
 					</li>
+					<li>
+						<a href="https://scholar.google.com/citations?user=CuRcbboAAAAJ&hl=en" target="_blank">
+							<img src="img/icon/scholar.png" alt="Google Scholar profile"/>
+						</a>
+					</li>
 				</ul>
 			</div>
 			<!-- other profiles end -->
+
+			<div class="display-5 font-italic text-center">
+				NOTE: I started building this site on July 7th, 2019. Please allow one week for all the content to be populated. Thank you!<br>
+				You can email me via the <span class="font-weight-bolder"><u><a href="pages/contact.html">Contact Me</a></u></span> page.
+			</div>
 		</div>
 	  <!-- Intro ened -->
 
