--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		<!-- additional stylesheets -->
+		<link rel="stylesheet" href="../styles/contact.css" type="text/css">
 		<link rel="icon" href="../img/logo.png" type="image/icon type">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 		<title>Contact Taihua</title>
@@ -42,12 +43,13 @@
 						</li>
 			  </div>
 			</nav>
+			<hr>
 		</div>
 		<!-- navigation bar end -->
 
 		<!-- contact me form -->
 		<div class="container my-5" style="width: 40%;">
-			<p class="font-italic"> You're Awesome! Let's Talk! </p>
+			<p class="font-italic text-center"> You're Awesome! Let's Talk! </p>
 			<hr style="border: 0; height: 1px; background: #333; background-image: linear-gradient(to right, #ccc, #333, #ccc);">
 			<form class="justify-content-center" action="https://formspree.io/taihua.ray.li@gmail.com" method="POST">
 					<div class="form-row">
@@ -68,7 +70,8 @@
 							<option>Networking</option>
 							<option>Inquire for a project</option>
 							<option>Job opportunity</option>
-							<option>Pro bono/Volunteer opportunity</option>
+							<option>Pro bono opportunity</option>
+							<option>Report a typo/error</option>
 							<option>Other</option>
 						</select>
 					</div>
@@ -93,8 +96,8 @@
 		<!-- contact me form end -->
 
 		<!-- copyright -->
-		<footer class="page-footer">
-			<div class="text-left fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
+		<footer class="page-footer my-3">
+			<div class="text-center align-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
 				&copy;2019 Taihua Li All Rights Reserved
 			</div>
 		</footer>
