--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		<!-- additional stylesheets -->
+		<link rel="stylesheet" href="../styles/about.css" type="text/css">
 		<link rel="icon" href="../img/logo.png" type="image/icon type">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 		<title>About Taihua Li</title>
@@ -42,12 +43,25 @@
 						</li>
 			  </div>
 			</nav>
+			<hr>
 		</div>
 		<!-- navigation bar end -->
+		<div class="container-fluid" style="width: 62%;">
+			<div class="row justify-content-center">
+				<img src="../img/headshot-1.jpeg" style="width: 80%;"/>
+			</div>
 
-		<p class="text-center"> Coming soon... In the meantime, here is a picture of me :)</p>
+			<div class="row justify-content-center mt-3">
+				<p style="font-size: 150%;">My name is <span style="font-family: STKaiti;">李泰华</span> (Taihua Li).</p>
+			</div>
 
-		<img src="../img/headshot-1.jpeg" style="width: 50%;"/>
+			<hr class="mt-0">
+
+			<div class="row justify-content-left">
+				<p>I work with data. I work with a lot of data. (to be continued...)</p>
+			</div>
+
+		</div>
 
 		<!-- copyright -->
 		<footer class="page-footer">
