--- a/pages/project.html
+++ b/pages/project.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		<!-- additional stylesheets -->
+		<link rel="stylesheet" href="../styles/project.css" type="text/css">
 		<link rel="icon" href="../img/logo.png" type="image/icon type">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 		<title>Taihua's Projects</title>
@@ -42,6 +43,7 @@
 						</li>
 			  </div>
 			</nav>
+			<hr>
 		</div>
 		<!-- navigation bar end -->
 
