--- a/pages/resume.html
+++ b/pages/resume.html
@@ -43,14 +43,15 @@
 						</li>
 			  </div>
 			</nav>
+			<hr class="mb-0">
 		</div>
 		<!-- navigation bar end -->
-		<div class="container-fluid" style="width: 65%">
-			<div class="row">
-				<h1 class="text-center" style="font-family: 'Courier New', Courier, monospace"> It's all about Data. </h1>
+		<div class="container-fluid" style="width: 62%">
+			<div class="row justify-content-center">
+				<h1 style="font-family: 'Courier New', Courier, monospace"> It's all about Data. </h1>
 			</div>
 
-			<hr>
+			<hr class="mt-0">
 
 			<!-- Expertise -->
 			<div class="row">
@@ -438,21 +439,102 @@
 		<div class="row">
 			<!-- title -->
 			<div class="col-sm-2">
-				<p style="font-size: 125%;">CERTIFICATE</p>
+				<p style="font-size: 125%;">CERTIFICATION</p>
 			</div>
 			<!--- title end -->
 
 			<!-- content -->
+			<div class="col-sm-10">
 
+				<!-- cert 0 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; Business Analytics Specialization, Wharton Business School
+					</div>
+					<div class="col-sm-3 text-right">
+						In Progress
+					</div>
+				</div>
+				<!-- cert 0 end -->
 
+				<!-- cert 1 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; Credential of Readiness (CORe), Havard Business School Online
+					</div>
+					<div class="col-sm-3 text-right">
+						Jun'19
+					</div>
+				</div>
+				<!-- cert 1 end -->
 
+				<!-- cert 2 -->
+				<div class="row">
+					<div class="col-sm-9 text-left">
+						&raquo; <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/7MLRJP24NQY7" target="_blank">Deep Learning Specialization</a>, deeplearning.ai
+					</div>
+					<div class="col-sm-3 text-right">
+						Feb'18
+					</div>
+				</div>
+				<!-- cert 2 end -->
+			</div>
 		  <!-- content end-->
 		</div>
-		<!-- Certificate  -->
+		<!-- Certificate end -->
+
+		<hr>
+
+		<!-- publication -->
+		<div class="row">
+			<!-- title -->
+			<div class="col-sm-2">
+				<p style="font-size: 125%;">PUBLICATION</p>
+			</div>
+
+			<!-- content -->
+			<div class="col-sm-10">
+
+				<div class="row mb-2">
+					<div class="col text-left" style="font-size: 80%;">
+						&raquo; Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Classification of Patients with Coronary Microvascular Dysfunction." IEEE/ACM transactions on computational biology and bioinformatics (2019). [<a href="https://ieeexplore.ieee.org/document/8704869" target="_blank">pdf</a>]
+					</div>
+				</div>
+
+				<div class="row mb-2">
+					<div class="col text-left" style="font-size: 80%;">
+						&raquo; Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Identifying Patients with Coronary Microvascular Dysfunction using Machine Learning." In 2018 IEEE International Conference on Data Mining Workshops (ICDMW), pp. 715-721. IEEE, 2018. [<a href="https://ieeexplore.ieee.org/abstract/document/8637572" target="_blank">pdf</a>]
+					</div>
+				</div>
+
+				<div class="row mb-2">
+					<div class="col text-left" style="font-size: 80%;">
+						&raquo; Bishara, Sarah, Jennifer Baltes, Taha Hamid, <span style="color: red;">Taihua Li</span>, Denise C. Nacu, Caitlin K Martin, Jonathan Gemmell, Chris MacArthur, Daniela Raicu, and Nichole Pinkard. "Revealing Interaction Patterns Among Youth in an Online Social Learning Network Using Markov Chain Principles." Philadelphia, PA: International Society of the Learning Sciences., 2017. [<a href="https://repository.isls.org/handle/1/246" target="_blank">pdf</a>]
+					</div>
+				</div>
+
+				<div class="row mb-2">
+					<div class="col text-left" style="font-size: 80%;">
+						&raquo; Nacu, Denise C., Caitlin K. Martin, Nichole Pinkard, Taha Hamid, <span style="color: red;">Taihua Li</span>, Daniela Stan Raicu, and Jonathan Gemmell. "Helping educators leverage youth interest in STEM out-of-school programs." In 2016 Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT), pp. 1-1. IEEE, 2016. [<a href="https://ieeexplore.ieee.org/abstract/document/7836178" target="_blank">pdf</a>]
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col text-left" style="font-size: 80%;">
+						&raquo; Hamid, Taha, Denise C. Nacu, <span style="color: red;">Taihua Li</span>, Jonathan Gemmell, Daniela Stan Raicu, Caitlin K. Martin, Michael Schutzenhofer, and Nichole Pinkard. "Recommender system to support brokering of youth learning opportunities." In 2016 IEEE/WIC/ACM International Conference on Web Intelligence Workshops (WIW), pp. 64-65. IEEE, 2016. [<a href="https://ieeexplore.ieee.org/document/7814479" target="_blank">pdf</a>]
+					</div>
+				</div>
+
+			</div>
+			<!-- content End -->
+		</div>
+		<!-- publication end -->
+
+		<hr>
 
 		<!-- copyright -->
-		<footer class="page-footer">
-			<div class="text-left fixed-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
+		<footer class="page-footer my-2">
+			<div class="text-center align-bottom font-weight-lighter text-muted font-italic" style="font-size:12px; font-family: Times New Roman;">
 				&copy;2019 Taihua Li All Rights Reserved
 			</div>
 		</footer>
